[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]

serde = "*"
serde_derive = "*"
num-derive = "*"
num-traits = "*"
bevy = { version = "0.14.0", features = ["dynamic_linking", "trace"], optional = true }
bevy_rapier2d = { version = "*", optional = true }
derive_macro = { path = "../derive-macro/" }

[features]
server = ["dep:bevy_rapier2d", "dep:bevy"]