[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]

bitcode = "*"
num-derive = "*"
num-traits = "*"

avian2d = { version = "0.3", default-features = false, features = [
    "2d",
    "parry-f32",
    "parallel",
], optional = true }
bevy = { version = "0.16.1", default-features = false, features = [
    "std",
], optional = true }
[features]
server = ["dep:avian2d", "dep:bevy"]
