[package]
name = "exosphere"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", features = ["dynamic_linking", "trace"] }
warp = "*"
tokio = { version = "*", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }
futures-util = "*"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
common = { path = "../common/", features = ["server"] }
bevy_rapier2d = { version = "*" }
bevy_time = "*"
rand = "*"
num-traits = "*"
num-derive = "*"

[profile.dev]
debug = 0
strip = "debuginfo"
opt-level = 1 # Switch to 1 for more runtime performance
# overflow-checks = false # Uncomment for better math performance

[profile.dev.package."*"]
opt-level = 2
