[package]
name = "exosphere"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common/", features = ["server"] }
bevy = { version = "0.16.1", default-features = false, features = ["std"] }
bevy_ecs_macros = { version = "0.16.1" }
avian2d = { version = "0.3", default-features = false, features = [
    "2d",
    "f32",
    "simd",
    "parallel",
    "parry-f32",
    "bevy_diagnostic",
] }
bevy_time = "*"
rand = "*"
bitcode = "*"
libc = "0.2.174"
ringbuf = "0.4.8"
sha1 = "0.10.6"
base64 = "0.22.1"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
glam = "0.29.3"
serde = "1.0.219"
serde_json = "1.0.142"
serde_derive = "1.0.219"

[profile.dev]
debug = 0
strip = "debuginfo"
opt-level = 1       # Switch to 1 for more runtime performance
# overflow-checks = false # Uncomment for better math performance

[profile.dev.package."*"]
opt-level = 2

[profile.release]
debug = true
